# Computer-Graphics-Programming

./: .gitignore  CMakeLists.txt  README.md  buildLinux.py  buildWindows.py
libs/glad/: CMakeLists.txt
libs/utils/: CMakeLists.txt
libs/utils/include/: Sphere.hpp  Torus.hpp  Utils.hpp
libs/utils/src/: Sphere.cpp  Torus.cpp  Utils.cpp
src/: 01_hello_window.cpp  02_triangles.cpp  03_mathematics_for_graphics.cpp  04_space_system.cpp  05_1_buffers_uniforms.cpp  05_buffers_uniforms.cpp  06_texture.cpp  07_phong_shading.cpp
src/shaders/: Fshader_03.glsl  Fshader_04.glsl  Fshader_06.glsl  Vshader_03.glsl  Vshader_04.glsl  Vshader_05.glsl  Vshader_051.glsl  Vshader_06.glsl  fragment_shader71.glsl  fragment_shader7_DL.glsl  vertex_shader7.glsl  vertex_shader71.glsl  vertex_shader7_AL.glsl  vertex_shader7_DL.glsl  vertex_shader7_SL.glsl
